@@ -252,11 +252,16 @@ md-sidenav {
   }
 }
 
-// Force wrapping of pre elements in HTML content
-.mailer_htmlcontent pre {
-  white-space: pre-wrap;
-  word-wrap: break-word;
-  tab-size: 4;
+.mailer_htmlcontent {
+  // Constrain absolute-positioned child elements to this element
+  position: relative;
+
+  // Force wrapping of pre elements in HTML content
+  pre {
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    tab-size: 4;
+  }
 }
 
 .sg-mail-editor {
